--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "eslint": "eslint --fix ."
   },
   "repository": {
     "type": "git",
