--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "eslint": "eslint --fix ."
+    "eslint": "eslint --fix .",
+    "init-db": "node ./src/model/init.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,10 @@
   },
   "homepage": "https://github.com/edsoncrlos/youtube-customization#readme",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
